--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -485,7 +485,7 @@
                 {
                     <div class="col-md-4">
                         <div class="position-relative form-group">
-                            <label for="exampleEmail" class="">Customer Name</label>
+                            <label for="exampleEmail" class="">Company Name</label>
                             @Html.DropDownList("Customer", (IEnumerable<SelectListItem>)ViewBag.Customer, "-Select-", new { id = "IDCustomer", @class = "form-control" })
                             @*@Html.DropDownList("Project", (IEnumerable<SelectListItem>), "- SELECT-", new { id = "IDProject", @class = "form-control" })*@
                         </div>
