--- a/ProAcc/Views/PreConvertion/PreConvertion_Upload.cshtml
+++ b/ProAcc/Views/PreConvertion/PreConvertion_Upload.cshtml
@@ -39,7 +39,7 @@
                 {
                     <div class="col-md-4">
                         <div class="position-relative form-group">
-                            <label for="exampleEmail" class="">Customer Name <strong style="color:red">*</strong></label>
+                            <label for="exampleEmail" class="">Company Name <strong style="color:red">*</strong></label>
                             @Html.DropDownList("Customer", (IEnumerable<SelectListItem>)ViewBag.Customer, "- SELECT-", new { id = "IDCustomer", @class = "form-control" })
                         </div>
                     </div>
