--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -211,7 +211,7 @@
                             $("#txtProjectName").val("")
                             $("#drpCustomer").val(0)
                             $("#txtDescription").val("")
-                            $("#btnProjectCreate").show();
+                            $("#btnAddNew").hide();
                             $("#btnProjectUpdate").hide();
                             $("#btnProjectCreate").show();
                         }
