--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -10,6 +10,7 @@
     }
 </style>
 <a class="card-title">Update Customer</a>
+<hr />
 <div style="padding:1em;">
     <div class="row">
         <div class="col-6">
@@ -40,7 +41,7 @@
                 </div>
             </div>
             <div class="form-group">
-            <label class="control-label col-md-4 required">Contact</label>
+                <label class="control-label col-md-5 required">Contact Person Name</label>
             <div class="col-md-10">
                 <input type="text" class="form-control" value="@Model.Contact" id="txtContact" />
                 @*<span id="lblIndustrySector" style="color:red" />*@
@@ -54,7 +55,7 @@
         <div class="col-6">
 
             <div class="form-group">
-                <label class="control-label col-md-4 required">Email</label>
+                <label class="control-label col-md-5 required">Contact Person Email</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" value="@Model.Email" id="txtCustomerEmail" />
                     @*<span id="lblCustomerEmail" style="color:red" />*@
@@ -65,7 +66,7 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-md-4 required">Phone</label>
+                <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" value="@Model.Phone" id="txtCustomerPhone" maxlength="10" />
                     @*<span id="lblCustomerPhone" style="color:red" />*@
@@ -120,6 +121,21 @@
             }
         });
 
+        $("#txtContact").keypress(function (event) {
+       
+            var inputValue = event.which;
+            // allow letters and whitespaces only.
+            if (!(inputValue >= 65 && inputValue <= 122) && (inputValue != 32 && inputValue != 0)) {
+                event.preventDefault();
+                $("#lblContact").html("Not Allowed").show().fadeOut(5000);
+                validatecustomer();
+            }
+            else {
+                $("#lblContact").html("").hide();
+                validatecustomer();
+            }
+        });
+
         $("#txtCustomerPhone").keypress(function (e) {
             if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
                 event.preventDefault();
@@ -162,21 +178,25 @@
             }
         });
 
+         
+
         function validatecustomer() {
             
            var CompanyName = $("#txtCompanyName").val().trim();
             var IndustrySector = $("#txtIndustrySector").val().trim();
+            var Contact = $("#txtContact").val().trim();
             var custphone = $("#txtCustomerPhone").val().trim();
             var custEmail = $("#txtCustomerEmail").val().trim();
 
             var lblCompanyName = $("#lblCompanyName").text().trim(); 
             var lblIndustrySector = $("#lblIndustrySector").text().trim();
+            var lblContact = $("#lblContact").text().trim();
             var lblcustphone = $("#lblCustomerPhone").text().trim();
             var lblcustEmail = $("#lblCustomerEmail").text().trim();
         
 
-            if (CompanyName.length > 0 && IndustrySector.length > 0 && custphone.length > 0 && custEmail.length > 0 &&
-                lblCompanyName == "" && lblIndustrySector == "" && lblcustphone == "" && lblcustEmail == "" ) {
+            if (CompanyName.length > 0 && IndustrySector.length > 0 && Contact.length > 0 && custphone.length > 0 && custEmail.length > 0 &&
+                lblCompanyName == "" && lblIndustrySector == "" && lblContact == "" && lblcustphone == "" && lblcustEmail == "" ) {
 
                 $("#btnCustomerUpdate").prop("disabled", false);
             }
@@ -187,16 +207,23 @@
         }
     });
 
+    function ValidateName(data) {
+             var letters = /^[A-Za-z, ]+$/;
+            if (!letters.test(data)) {
+                return false;
+            }
+         }
      $("#btnCustomerUpdate").on("click", function () {
          
          var id = $("#customerid").val();
         var CompanyName = $("#txtCompanyName").val().trim();
-        var IndustrySector = $("#txtIndustrySector").val().trim();
+         var IndustrySector = $("#txtIndustrySector").val().trim();
+         var Contact = $('#txtContact').val().trim();
         var custphone = $("#txtCustomerPhone").val().trim();
         var custEmail=$("#txtCustomerEmail").val().trim();
         var cre_on = $("#pcre_on").val();
          var cre_By = $("#pcre_By").val();
-         var Contact = $('#txtContact').val();
+         
          var model = {
              Customer_Id: id,
              Company_Name: CompanyName,
@@ -207,12 +234,16 @@
              Cre_on: cre_on,
              Cre_By: cre_By
          }
-       if (CompanyName == "") {
+         if (CompanyName == "" || ValidateName(CompanyName) == false) {
             $("#lblCompanyName").html("Please enter the Company Name").show().fadeOut(2000);
         }
-        else if (IndustrySector =="")
+        else if (IndustrySector ==""|| ValidateName(IndustrySector) == false)
         {
             $("#lblIndustrySector").html("Please enter the Industry Sector").show().fadeOut(2000);
+        }
+        else if (Contact ==""|| ValidateName(Contact) == false)
+        {
+            $("#lblContact").html("Please enter the Contact Person Name").show().fadeOut(2000);
         }
         else if (custphone=="")
         {
